--- a/P009473.opf/meta.yml
+++ b/P009473.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P009473
+id: P009473
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W20850
   title: མཚུར་ཕུ་དགོན་གྱི་དཀར་ཆག་ཀུན་གསལ་མེ་ལོང
-  volume: ''
   author: ''
+  volumes: {}
