--- a/P009473.opf/layers/v001/Pagination.yml
+++ b/P009473.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 8f22098a95944740857c23b7b48dcb0b
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   6391f068747e4e4cbc49e899d65f545b:
